--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: Squid5486 # Your GitHub organization or username, where this repository live
+owner: h4arn # Your GitHub organization or username, where this repository live
 repo: upptime # The name of this repository
 
 sites:
